<resources>
    <string name="app_name">PRET</string>
    <string name="action_scan">SNMP Scan</string>
    <string name="action_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_printers">Clear Saved Printers</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="pret_download_title">Downloading PRET…</string>
    <string name="pret_download_confirm_title">Download PRET?</string>
    <string name="pret_download_confirm_message">PRET must be downloaded for this application to work. Would you like to download PRET now? (~1.5MB)</string>
    <string name="printer_new_title">Add Printer</string>
    <string name="printer_new_message">Please fill out target printer\'s details.</string>
    <string name="saved_printers_filename">saved_printers</string>
</resources>
