<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pretandroid.MainActivity" >
    <item android:id="@+id/action_scan"
        android:title="@string/action_scan"
        android:orderInCategory="0"
        app:showAsAction="never" />
    <item android:id="@+id/action_update"
        android:title="@string/action_update"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_printers"
        android:title="@string/action_clear_printers"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
